samples/_failures_safe/1761632433_304cda_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9a93abc.c: In function ‘main’:
./samples/SAFE/__tmp_f9a93abc.c:149:26: error: expected ‘;’ at end of input
  149 |         choice = read_int
      |                          ^
      |                          ;
./samples/SAFE/__tmp_f9a93abc.c:149:9: error: expected declaration or statement at end of input
  149 |         choice = read_int
      |         ^~~~~~
./samples/SAFE/__tmp_f9a93abc.c:149:9: error: expected declaration or statement at end of input
